trying to fix alignment

--- a/td-ui/src/app/curr-list/curr-list.component.css
+++ b/td-ui/src/app/curr-list/curr-list.component.css
@@ -19,7 +19,7 @@ p {
     padding: 0;
 }
 
-.classContent {
+.taskContent {
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -28,10 +28,8 @@ p {
 .detail {
     font-size: 0.9em;
     color: grey;
-    flex-grow: 0; /* Pushes it to the right naturally */
+    flex-grow: 0;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
-
